# rieszreg

./: .gitignore  .nojekyll  CLAUDE.md  README.md  RIESZREG_DESIGN.md  developing.html  diagnostics.html  estimands.html  index.html  install.html  intro.html  losses.html  pyproject.toml  quickstart.html  r-interface.html  references.html  related.html  save-and-load.html  search.json  sklearn-integration.html  troubleshooting.html  tuning-and-cross-fitting.html  tuning-cross-fitting.html
backends/: boosting.html  forest.html  index.html  kernel.html  neural.html  tree.html
docs/: _quarto.yml  _setup.qmd  developing.qmd  diagnostics.qmd  estimands.qmd  extending.qmd  index.qmd  index.quarto_ipynb  install.qmd  intro.qmd  losses.qmd  quickstart.qmd  r-interface.qmd  references.qmd  related.qmd  save-and-load.qmd  sklearn-integration.qmd  (+3 more)
rieszreg/python/: pyproject.toml
rieszreg/python/rieszreg/: __init__.py  augmentation.py  diagnostics.py  estimator.py  scoring.py
rieszreg/python/rieszreg/backends/: __init__.py  base.py
rieszreg/python/rieszreg/estimands/: __init__.py  base.py  tracer.py
rieszreg/python/rieszreg/losses/: __init__.py  base.py  bernoulli.py  bounded_squared.py  kl.py  squared.py
rieszreg/python/rieszreg/testing/: __init__.py  dgps.py  parity.py
rieszreg/python/tests/: test_augmentation.py  test_augmentation_fast_parity.py  test_augmentation_minimality.py  test_backend_dispatch.py  test_diagnostics.py  test_estimand_factories.py  test_estimator_orchestration.py  test_losses.py  test_scoring.py  test_testing_utilities.py  test_tracer.py
(+97 files in other folders)
