[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rieszreg"
version = "0.0.1"
description = "Shared abstractions for the Riesz-regression package family (estimands, losses, augmentation, diagnostics, sklearn orchestrator)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
test = ["pytest>=7", "hypothesis>=6", "pandas>=2.0"]
autograd = ["jax>=0.4"]  # used as a default for `Loss.potential_deriv` when
                          # the user's `potential` is jax-traceable

[tool.setuptools.packages.find]
where = ["."]
include = ["rieszreg*"]
